# quasar-lang

./: CHANGELOG.md  README.md  pyproject.toml
docs/: ARCHITECTURAL_PERIMETER.md  INVARIANTS.md  NON_GOALS.md  PHASE10_DESIGN.md  PHASE11_DESIGN.md  PHASE12_DESIGN.md  PHASE12_POSTMORTEM.md  PHASE12_ROADMAP.md  PHASE13_DESIGN.md  PHASE5_1_DESIGN.md  PHASE5_2_DESIGN.md  PHASE5_DESIGN.md  PHASE6_DESIGN.md  PHASE7_DESIGN.md  PHASE8_DESIGN.md  PHASE9_DESIGN.md  QUASAR_SPECIFICATION.md  RELEASE_v1.3.0.md  RELEASE_v1.4.0.md  RELEASE_v1.5.0.md  RELEASE_v1.6.0.md  RELEASE_v1.7.0.md  RELEASE_v1.8.0.md
docs/spec/: .gitkeep
examples/: .gitkeep  calculator.qsr  error.qsr  factorial.py  factorial.qsr  fib.qsr  fibonacci.qsr  frequency.qsr  geometry.qsr  interactive.qsr  matrix.qsr  primes.qsr  rpg.qsr
examples/multi_file_project/: main.py  main.qsr  utils.py  utils.qsr
src/quasar/: __init__.py  __main__.py
src/quasar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: __init__.py
tests/ast/: __init__.py
tests/cli/: test_cli.py
tests/codegen/: __init__.py  test_declarations.py  test_expressions.py  test_literals.py  test_print.py  test_print_fmt.py  test_programs.py  test_statements.py
tests/e2e/: test_integration_print_ext.py  test_integration_print_fmt.py  test_print.py
tests/hardening/: test_division_zero.py  test_enum_edge_cases.py  test_return_path.py
tests/hotfix/: test_hotfix_precedence.py
tests/lexer/: __init__.py  test_errors.py  test_print.py  test_spans.py  test_tokenize.py
tests/parser/: __init__.py  test_declarations.py  test_errors.py  (+3 more)
(+51 files in other folders)
